parser.output
Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement

    7 declaration: declaration_specifiers init_declarator_list T_SEMICOLON
    8            | declaration_specifiers T_SEMICOLON
    9            | T_TYPEDEF declaration_specifiers init_declarator_list T_SEMICOLON

   10 declaration_specifiers: type_specifier
   11                       | T_CONST declaration_specifiers
   12                       | T_STATIC declaration_specifiers
   13                       | T_EXTERN declaration_specifiers
   14                       | T_VOLATILE declaration_specifiers
   15                       | T_INLINE declaration_specifiers

   16 init_declarator_list: init_declarator
   17                     | init_declarator_list T_COMMA init_declarator

   18 init_declarator: declarator
   19                | declarator T_ASSIGN initializer

   20 declarator: pointer direct_declarator
   21           | direct_declarator

   22 direct_declarator: T_IDENTIFIER
   23                  | T_LPAREN declarator T_RPAREN
   24                  | direct_declarator T_LBRACKET conditional_expression T_RBRACKET
   25                  | direct_declarator T_LBRACKET T_RBRACKET
   26                  | direct_declarator T_LPAREN param_list T_RPAREN
   27                  | direct_declarator T_LPAREN T_RPAREN

   28 pointer: T_MUL
   29        | T_MUL pointer

   30 param_list: parameter_declaration
   31           | param_list T_COMMA parameter_declaration

   32 parameter_declaration: declaration_specifiers declarator
   33                      | declaration_specifiers abstract_declarator
   34                      | declaration_specifiers

   35 type_name: declaration_specifiers
   36          | declaration_specifiers abstract_declarator

   37 abstract_declarator: pointer
   38                    | direct_abstract_declarator
   39                    | pointer direct_abstract_declarator

   40 direct_abstract_declarator: T_LPAREN abstract_declarator T_RPAREN
   41                           | T_LBRACKET T_RBRACKET
   42                           | T_LBRACKET conditional_expression T_RBRACKET
   43                           | direct_abstract_declarator T_LBRACKET T_RBRACKET
   44                           | direct_abstract_declarator T_LBRACKET conditional_expression T_RBRACKET
   45                           | T_LPAREN T_RPAREN
   46                           | T_LPAREN param_list T_RPAREN
   47                           | direct_abstract_declarator T_LPAREN T_RPAREN
   48                           | direct_abstract_declarator T_LPAREN param_list T_RPAREN

   49 statement: labeled_statement
   50          | compound_statement
   51          | expression T_SEMICOLON
   52          | selection_statement
   53          | iteration_statement
   54          | jump_statement

   55 compound_statement: T_LBRACE T_RBRACE
   56                   | T_LBRACE block_item_list T_RBRACE

   57 block_item_list: block_item
   58                | block_item_list block_item

   59 block_item: declaration
   60           | statement

   61 labeled_statement: T_IDENTIFIER ':' statement
   62                  | T_CASE conditional_expression ':' statement
   63                  | T_DEFAULT ':' statement
   64                  | T_IDENTIFIER ':' T_SEMICOLON

   65 selection_statement: T_IF T_LPAREN expression T_RPAREN statement
   66                    | T_IF T_LPAREN expression T_RPAREN statement T_ELSE statement
   67                    | T_SWITCH T_LPAREN expression T_RPAREN statement

   68 iteration_statement: T_WHILE T_LPAREN expression T_RPAREN statement
   69                    | T_DO statement T_WHILE T_LPAREN expression T_RPAREN T_SEMICOLON
   70                    | T_FOR T_LPAREN expression T_SEMICOLON expression T_SEMICOLON T_RPAREN statement
   71                    | T_FOR T_LPAREN expression T_SEMICOLON expression T_SEMICOLON expression T_RPAREN statement
   72                    | T_FOR T_LPAREN declaration expression T_SEMICOLON T_RPAREN statement
   73                    | T_FOR T_LPAREN declaration expression T_SEMICOLON expression T_RPAREN statement

   74 jump_statement: T_GOTO T_IDENTIFIER T_SEMICOLON
   75               | T_CONTINUE T_SEMICOLON
   76               | T_BREAK T_SEMICOLON
   77               | T_RETURN T_SEMICOLON
   78               | T_RETURN expression T_SEMICOLON

   79 expression: assignment_expression
   80           | expression T_COMMA assignment_expression

   81 assignment_expression: conditional_expression
   82                      | unary_expression T_ASSIGN assignment_expression
   83                      | unary_expression T_ADD_ASSIGN assignment_expression
   84                      | unary_expression T_SUB_ASSIGN assignment_expression
   85                      | unary_expression T_MUL_ASSIGN assignment_expression
   86                      | unary_expression T_DIV_ASSIGN assignment_expression
   87                      | unary_expression T_MOD_ASSIGN assignment_expression

   88 conditional_expression: logical_or_expression
   89                       | logical_or_expression T_QUESTION expression T_COLON conditional_expression

   90 logical_or_expression: logical_and_expression
   91                      | logical_or_expression T_LOGICAL_OR logical_and_expression

   92 logical_and_expression: inclusive_or_expression
   93                       | logical_and_expression T_LOGICAL_AND inclusive_or_expression

   94 inclusive_or_expression: exclusive_or_expression
   95                        | inclusive_or_expression T_BITWISE_OR exclusive_or_expression

   96 exclusive_or_expression: and_expression
   97                        | exclusive_or_expression T_BITWISE_XOR and_expression

   98 and_expression: equality_expression
   99               | and_expression T_BITWISE_AND equality_expression

  100 equality_expression: relational_expression
  101                    | equality_expression T_EQ relational_expression
  102                    | equality_expression T_NE relational_expression

  103 relational_expression: shift_expression
  104                      | relational_expression T_LT shift_expression
  105                      | relational_expression T_GT shift_expression
  106                      | relational_expression T_LE shift_expression
  107                      | relational_expression T_GE shift_expression

  108 shift_expression: additive_expression
  109                 | shift_expression T_LSHIFT additive_expression
  110                 | shift_expression T_RSHIFT additive_expression

  111 additive_expression: multiplicative_expression
  112                    | additive_expression T_ADD multiplicative_expression
  113                    | additive_expression T_SUB multiplicative_expression

  114 multiplicative_expression: cast_expression
  115                          | multiplicative_expression T_MUL cast_expression
  116                          | multiplicative_expression T_DIV cast_expression
  117                          | multiplicative_expression T_MOD cast_expression

  118 cast_expression: unary_expression
  119                | T_LPAREN type_name T_RPAREN cast_expression

  120 unary_expression: postfix_expression
  121                 | T_INC unary_expression
  122                 | T_DEC unary_expression
  123                 | T_BITWISE_AND cast_expression
  124                 | T_MUL cast_expression
  125                 | T_ADD cast_expression
  126                 | T_SUB cast_expression
  127                 | T_BITWISE_NOT cast_expression
  128                 | T_LOGICAL_NOT cast_expression
  129                 | T_SIZEOF unary_expression
  130                 | T_SIZEOF T_LPAREN type_name T_RPAREN

  131 postfix_expression: primary_expression
  132                   | postfix_expression T_LBRACKET expression T_RBRACKET
  133                   | postfix_expression T_LPAREN T_RPAREN
  134                   | postfix_expression T_LPAREN argument_expression_list T_RPAREN
  135                   | postfix_expression T_DOT T_IDENTIFIER
  136                   | postfix_expression T_ARROW T_IDENTIFIER
  137                   | postfix_expression T_INC
  138                   | postfix_expression T_DEC

  139 primary_expression: T_IDENTIFIER
  140                   | T_INTEGER
  141                   | T_FLOAT_LITERAL
  142                   | T_CHAR_LITERAL
  143                   | T_STRING_LITERAL
  144                   | T_LPAREN expression T_RPAREN

  145 argument_expression_list: assignment_expression
  146                         | argument_expression_list T_COMMA assignment_expression

  147 initializer: assignment_expression
  148            | T_LBRACE initializer_list T_RBRACE
  149            | T_LBRACE initializer_list T_COMMA T_RBRACE

  150 initializer_list: initializer
  151                 | initializer_list T_COMMA initializer

  152 type_specifier: T_VOID
  153               | T_CHAR
  154               | T_SHORT
  155               | T_INT
  156               | T_LONG
  157               | T_FLOAT
  158               | T_DOUBLE
  159               | T_SIGNED
  160               | T_UNSIGNED
  161               | struct_specifier
  162               | union_specifier
  163               | enum_specifier
  164               | T_TYPENAME

  165 struct_specifier: T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | T_STRUCT T_IDENTIFIER

  168 union_specifier: T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | T_UNION T_IDENTIFIER

  171 enum_specifier: T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | T_ENUM T_IDENTIFIER

  174 enumerator_list: enumerator
  175                | enumerator_list T_COMMA enumerator

  176 enumerator: T_IDENTIFIER
  177           | T_IDENTIFIER T_ASSIGN conditional_expression

  178 struct_declaration_list: struct_declaration
  179                        | struct_declaration_list struct_declaration

  180 struct_declaration: declaration_specifiers declarator_list T_SEMICOLON

  181 declarator_list: declarator
  182                | declarator_list T_COMMA declarator


Terminals, with rules where they appear

    $end (0) 0
    ':' (58) 61 62 63 64
    error (256)
    T_IDENTIFIER <string_value> (258) 22 61 64 74 135 136 139 165 167 168 170 171 173 176 177
    T_TYPENAME <string_value> (259) 164
    T_INTEGER <integer_value> (260) 140
    T_FLOAT_LITERAL <string_value> (261) 141
    T_CHAR_LITERAL <string_value> (262) 142
    T_STRING_LITERAL <string_value> (263) 143
    T_INT (264) 155
    T_RETURN (265) 77 78
    T_IF (266) 65 66
    T_ELSE (267) 66
    T_WHILE (268) 68 69
    T_FOR (269) 70 71 72 73
    T_SWITCH (270) 67
    T_CASE (271) 62
    T_DEFAULT (272) 63
    T_BREAK (273) 76
    T_DO (274) 69
    T_CONTINUE (275) 75
    T_GOTO (276) 74
    T_STRUCT (277) 165 166 167
    T_UNION (278) 168 169 170
    T_ENUM (279) 171 172 173
    T_CHAR (280) 153
    T_FLOAT (281) 157
    T_DOUBLE (282) 158
    T_VOID (283) 152
    T_SHORT (284) 154
    T_LONG (285) 156
    T_SIGNED (286) 159
    T_UNSIGNED (287) 160
    T_TYPEDEF (288) 9
    T_SIZEOF (289) 129 130
    T_CONST (290) 11
    T_STATIC (291) 12
    T_EXTERN (292) 13
    T_VOLATILE (293) 14
    T_INLINE (294) 15
    T_SEMICOLON (295) 7 8 9 51 64 69 70 71 72 73 74 75 76 77 78 180
    T_LPAREN (296) 23 26 27 40 45 46 47 48 65 66 67 68 69 70 71 72 73 119 130 133 134 144
    T_RPAREN (297) 23 26 27 40 45 46 47 48 65 66 67 68 69 70 71 72 73 119 130 133 134 144
    T_LBRACE (298) 55 56 148 149 165 166 168 169 171 172
    T_RBRACE (299) 55 56 148 149 165 166 168 169 171 172
    T_COMMA (300) 17 31 80 146 149 151 175 182
    T_LBRACKET (301) 24 25 41 42 43 44 132
    T_RBRACKET (302) 24 25 41 42 43 44 132
    T_DOT (303) 135
    T_ARROW (304) 136
    T_INC (305) 121 137
    T_DEC (306) 122 138
    T_LOGICAL_NOT (307) 128
    T_BITWISE_NOT (308) 127
    T_LOGICAL_AND (309) 93
    T_LOGICAL_OR (310) 91
    T_BITWISE_AND (311) 99 123
    T_BITWISE_OR (312) 95
    T_BITWISE_XOR (313) 97
    T_LSHIFT (314) 109
    T_RSHIFT (315) 110
    T_ASSIGN (316) 19 82 177
    T_ADD_ASSIGN (317) 83
    T_SUB_ASSIGN (318) 84
    T_MUL_ASSIGN (319) 85
    T_DIV_ASSIGN (320) 86
    T_MOD_ASSIGN (321) 87
    T_EQ (322) 101
    T_NE (323) 102
    T_GT (324) 105
    T_GE (325) 107
    T_LT (326) 104
    T_LE (327) 106
    T_ADD (328) 112 125
    T_SUB (329) 113 126
    T_MUL (330) 28 29 115 124
    T_DIV (331) 116
    T_MOD (332) 117
    T_QUESTION (333) 89
    T_COLON (334) 89
    T_IFX (335)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    program <node> (83)
        on left: 1
        on right: 0
    translation_unit <node> (84)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (85)
        on left: 4 5
        on right: 2 3
    function_definition <node> (86)
        on left: 6
        on right: 4
    declaration <node> (87)
        on left: 7 8 9
        on right: 5 59 72 73
    declaration_specifiers <type> (88)
        on left: 10 11 12 13 14 15
        on right: 6 7 8 9 11 12 13 14 15 32 33 34 35 36 180
    init_declarator_list <node> (89)
        on left: 16 17
        on right: 7 9 17
    init_declarator <node> (90)
        on left: 18 19
        on right: 16 17
    declarator <node> (91)
        on left: 20 21
        on right: 6 18 19 23 32 181 182
    direct_declarator <node> (92)
        on left: 22 23 24 25 26 27
        on right: 20 21 24 25 26 27
    pointer <type> (93)
        on left: 28 29
        on right: 20 29 37 39
    param_list <node> (94)
        on left: 30 31
        on right: 26 31 46 48
    parameter_declaration <node> (95)
        on left: 32 33 34
        on right: 30 31
    type_name <type> (96)
        on left: 35 36
        on right: 119 130
    abstract_declarator <type> (97)
        on left: 37 38 39
        on right: 33 36 40
    direct_abstract_declarator <type> (98)
        on left: 40 41 42 43 44 45 46 47 48
        on right: 38 39 43 44 47 48
    statement <node> (99)
        on left: 49 50 51 52 53 54
        on right: 60 61 62 63 65 66 67 68 69 70 71 72 73
    compound_statement <node> (100)
        on left: 55 56
        on right: 6 50
    block_item_list <node> (101)
        on left: 57 58
        on right: 56 58
    block_item <node> (102)
        on left: 59 60
        on right: 57 58
    labeled_statement <node> (103)
        on left: 61 62 63 64
        on right: 49
    selection_statement <node> (104)
        on left: 65 66 67
        on right: 52
    iteration_statement <node> (105)
        on left: 68 69 70 71 72 73
        on right: 53
    jump_statement <node> (106)
        on left: 74 75 76 77 78
        on right: 54
    expression <node> (107)
        on left: 79 80
        on right: 51 65 66 67 68 69 70 71 72 73 78 80 89 132 144
    assignment_expression <node> (108)
        on left: 81 82 83 84 85 86 87
        on right: 79 80 82 83 84 85 86 87 145 146 147
    conditional_expression <node> (109)
        on left: 88 89
        on right: 24 42 44 62 81 89 177
    logical_or_expression <node> (110)
        on left: 90 91
        on right: 88 89 91
    logical_and_expression <node> (111)
        on left: 92 93
        on right: 90 91 93
    inclusive_or_expression <node> (112)
        on left: 94 95
        on right: 92 93 95
    exclusive_or_expression <node> (113)
        on left: 96 97
        on right: 94 95 97
    and_expression <node> (114)
        on left: 98 99
        on right: 96 97 99
    equality_expression <node> (115)
        on left: 100 101 102
        on right: 98 99 101 102
    relational_expression <node> (116)
        on left: 103 104 105 106 107
        on right: 100 101 102 104 105 106 107
    shift_expression <node> (117)
        on left: 108 109 110
        on right: 103 104 105 106 107 109 110
    additive_expression <node> (118)
        on left: 111 112 113
        on right: 108 109 110 112 113
    multiplicative_expression <node> (119)
        on left: 114 115 116 117
        on right: 111 112 113 115 116 117
    cast_expression <node> (120)
        on left: 118 119
        on right: 114 115 116 117 119 123 124 125 126 127 128
    unary_expression <node> (121)
        on left: 120 121 122 123 124 125 126 127 128 129 130
        on right: 82 83 84 85 86 87 118 121 122 129
    postfix_expression <node> (122)
        on left: 131 132 133 134 135 136 137 138
        on right: 120 132 133 134 135 136 137 138
    primary_expression <node> (123)
        on left: 139 140 141 142 143 144
        on right: 131
    argument_expression_list <node> (124)
        on left: 145 146
        on right: 134 146
    initializer <node> (125)
        on left: 147 148 149
        on right: 19 150 151
    initializer_list <node> (126)
        on left: 150 151
        on right: 148 149 151
    type_specifier <type> (127)
        on left: 152 153 154 155 156 157 158 159 160 161 162 163 164
        on right: 10
    struct_specifier <node> (128)
        on left: 165 166 167
        on right: 161
    union_specifier <node> (129)
        on left: 168 169 170
        on right: 162
    enum_specifier <node> (130)
        on left: 171 172 173
        on right: 163
    enumerator_list <node> (131)
        on left: 174 175
        on right: 171 172 175
    enumerator <node> (132)
        on left: 176 177
        on right: 174 175
    struct_declaration_list <node> (133)
        on left: 178 179
        on right: 165 166 168 169 179
    struct_declaration <node> (134)
        on left: 180
        on right: 178 179
    declarator_list <node> (135)
        on left: 181 182
        on right: 180 182


State 0

    0 $accept: • program $end
    1 program: • translation_unit
    2 translation_unit: • external_declaration
    3                 | • translation_unit external_declaration
    4 external_declaration: • function_definition
    5                     | • declaration
    6 function_definition: • declaration_specifiers declarator compound_statement
    7 declaration: • declaration_specifiers init_declarator_list T_SEMICOLON
    8            | • declaration_specifiers T_SEMICOLON
    9            | • T_TYPEDEF declaration_specifiers init_declarator_list T_SEMICOLON
   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER

    T_TYPENAME  shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRUCT    shift, and go to state 3
    T_UNION     shift, and go to state 4
    T_ENUM      shift, and go to state 5
    T_CHAR      shift, and go to state 6
    T_FLOAT     shift, and go to state 7
    T_DOUBLE    shift, and go to state 8
    T_VOID      shift, and go to state 9
    T_SHORT     shift, and go to state 10
    T_LONG      shift, and go to state 11
    T_SIGNED    shift, and go to state 12
    T_UNSIGNED  shift, and go to state 13
    T_TYPEDEF   shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_EXTERN    shift, and go to state 17
    T_VOLATILE  shift, and go to state 18
    T_INLINE    shift, and go to state 19

    program                 go to state 20
    translation_unit        go to state 21
    external_declaration    go to state 22
    function_definition     go to state 23
    declaration             go to state 24
    declaration_specifiers  go to state 25
    type_specifier          go to state 26
    struct_specifier        go to state 27
    union_specifier         go to state 28
    enum_specifier          go to state 29


State 1

  164 type_specifier: T_TYPENAME •

    $default  reduce using rule 164 (type_specifier)


State 2

  155 type_specifier: T_INT •

    $default  reduce using rule 155 (type_specifier)


State 3

  165 struct_specifier: T_STRUCT • T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | T_STRUCT • T_LBRACE struct_declaration_list T_RBRACE
  167                 | T_STRUCT • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 30
    T_LBRACE      shift, and go to state 31


State 4

  168 union_specifier: T_UNION • T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | T_UNION • T_LBRACE struct_declaration_list T_RBRACE
  170                | T_UNION • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 32
    T_LBRACE      shift, and go to state 33


State 5

  171 enum_specifier: T_ENUM • T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | T_ENUM • T_LBRACE enumerator_list T_RBRACE
  173               | T_ENUM • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 34
    T_LBRACE      shift, and go to state 35


State 6

  153 type_specifier: T_CHAR •

    $default  reduce using rule 153 (type_specifier)


State 7

  157 type_specifier: T_FLOAT •

    $default  reduce using rule 157 (type_specifier)


State 8

  158 type_specifier: T_DOUBLE •

    $default  reduce using rule 158 (type_specifier)


State 9

  152 type_specifier: T_VOID •

    $default  reduce using rule 152 (type_specifier)


State 10

  154 type_specifier: T_SHORT •

    $default  reduce using rule 154 (type_specifier)


State 11

  156 type_specifier: T_LONG •

    $default  reduce using rule 156 (type_specifier)


State 12

  159 type_specifier: T_SIGNED •

    $default  reduce using rule 159 (type_specifier)


State 13

  160 type_specifier: T_UNSIGNED •

    $default  reduce using rule 160 (type_specifier)


State 14

    9 declaration: T_TYPEDEF • declaration_specifiers init_declarator_list T_SEMICOLON
   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER

    T_TYPENAME  shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRUCT    shift, and go to state 3
    T_UNION     shift, and go to state 4
    T_ENUM      shift, and go to state 5
    T_CHAR      shift, and go to state 6
    T_FLOAT     shift, and go to state 7
    T_DOUBLE    shift, and go to state 8
    T_VOID      shift, and go to state 9
    T_SHORT     shift, and go to state 10
    T_LONG      shift, and go to state 11
    T_SIGNED    shift, and go to state 12
    T_UNSIGNED  shift, and go to state 13
    T_CONST     shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_EXTERN    shift, and go to state 17
    T_VOLATILE  shift, and go to state 18
    T_INLINE    shift, and go to state 19

    declaration_specifiers  go to state 36
    type_specifier          go to state 26
    struct_specifier        go to state 27
    union_specifier         go to state 28
    enum_specifier          go to state 29


State 15

   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   11                       | T_CONST • declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER

    T_TYPENAME  shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRUCT    shift, and go to state 3
    T_UNION     shift, and go to state 4
    T_ENUM      shift, and go to state 5
    T_CHAR      shift, and go to state 6
    T_FLOAT     shift, and go to state 7
    T_DOUBLE    shift, and go to state 8
    T_VOID      shift, and go to state 9
    T_SHORT     shift, and go to state 10
    T_LONG      shift, and go to state 11
    T_SIGNED    shift, and go to state 12
    T_UNSIGNED  shift, and go to state 13
    T_CONST     shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_EXTERN    shift, and go to state 17
    T_VOLATILE  shift, and go to state 18
    T_INLINE    shift, and go to state 19

    declaration_specifiers  go to state 37
    type_specifier          go to state 26
    struct_specifier        go to state 27
    union_specifier         go to state 28
    enum_specifier          go to state 29


State 16

   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   12                       | T_STATIC • declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER

    T_TYPENAME  shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRUCT    shift, and go to state 3
    T_UNION     shift, and go to state 4
    T_ENUM      shift, and go to state 5
    T_CHAR      shift, and go to state 6
    T_FLOAT     shift, and go to state 7
    T_DOUBLE    shift, and go to state 8
    T_VOID      shift, and go to state 9
    T_SHORT     shift, and go to state 10
    T_LONG      shift, and go to state 11
    T_SIGNED    shift, and go to state 12
    T_UNSIGNED  shift, and go to state 13
    T_CONST     shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_EXTERN    shift, and go to state 17
    T_VOLATILE  shift, and go to state 18
    T_INLINE    shift, and go to state 19

    declaration_specifiers  go to state 38
    type_specifier          go to state 26
    struct_specifier        go to state 27
    union_specifier         go to state 28
    enum_specifier          go to state 29


State 17

   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   13                       | T_EXTERN • declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER

    T_TYPENAME  shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRUCT    shift, and go to state 3
    T_UNION     shift, and go to state 4
    T_ENUM      shift, and go to state 5
    T_CHAR      shift, and go to state 6
    T_FLOAT     shift, and go to state 7
    T_DOUBLE    shift, and go to state 8
    T_VOID      shift, and go to state 9
    T_SHORT     shift, and go to state 10
    T_LONG      shift, and go to state 11
    T_SIGNED    shift, and go to state 12
    T_UNSIGNED  shift, and go to state 13
    T_CONST     shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_EXTERN    shift, and go to state 17
    T_VOLATILE  shift, and go to state 18
    T_INLINE    shift, and go to state 19

    declaration_specifiers  go to state 39
    type_specifier          go to state 26
    struct_specifier        go to state 27
    union_specifier         go to state 28
    enum_specifier          go to state 29


State 18

   10 declaration_specifiers: • type_specifier
   11                       | • T_CONST declaration_specifiers
   12                       | • T_STATIC declaration_specifiers
   13                       | • T_EXTERN declaration_specifiers
   14                       | • T_VOLATILE declaration_specifiers
   14                       | T_VOLATILE • declaration_specifiers
   15                       | • T_INLINE declaration_specifiers
  152 type_specifier: • T_VOID
  153               | • T_CHAR
  154               | • T_SHORT
  155               | • T_INT
  156               | • T_LONG
  157               | • T_FLOAT
  158               | • T_DOUBLE
  159               | • T_SIGNED
  160               | • T_UNSIGNED
  161               | • struct_specifier
  162               | • union_specifier
  163               | • enum_specifier
  164               | • T_TYPENAME
  165 struct_specifier: • T_STRUCT T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  166                 | • T_STRUCT T_LBRACE struct_declaration_list T_RBRACE
  167                 | • T_STRUCT T_IDENTIFIER
  168 union_specifier: • T_UNION T_IDENTIFIER T_LBRACE struct_declaration_list T_RBRACE
  169                | • T_UNION T_LBRACE struct_declaration_list T_RBRACE
  170                | • T_UNION T_IDENTIFIER
  171 enum_specifier: • T_ENUM T_IDENTIFIER T_LBRACE enumerator_list T_RBRACE
  172               | • T_ENUM T_LBRACE enumerator_list T_RBRACE
  173               | • T_ENUM T_IDENTIFIER
